# facetrack

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.hpp  DetectTrackFace.cpp  DetectTrackFace.hpp  PWM_Control.cpp  PWM_Control.hpp  README.md  base64.cpp  base64.h  commonInterface.hpp  drawLandmarks.cpp  drawLandmarks.hpp  facetrack.cpp  sha1.cpp  sha1.h  socket_rasp.cpp  socket_rasp.hpp  ws.html
socket_client/: socket_client.cpp
src/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.hpp  DetectTrackFace.cpp  DetectTrackFace.hpp  PWM_Control.cpp  PWM_Control.hpp  base64.cpp  base64.h  commonInterface.hpp  drawLandmarks.cpp  drawLandmarks.hpp  facetrack.cpp  md5.cpp  md5.h  sha1.cpp  sha1.h  socket_rasp.cpp  socket_rasp.hpp
test/: CMakeLists.txt  DetectTrackFace_test.cpp
websocket_client/: index.html  pom.xml  ws.html
websocket_client/src/main/java/com/HYX/WebsocketClient/: WebsocketClientApplication.java
websocket_client/src/main/java/com/HYX/WebsocketClient/controller/admin/: AdminController.java
websocket_client/src/main/java/com/HYX/WebsocketClient/controller/common/: KaptchaController.java
websocket_client/src/main/java/com/HYX/WebsocketClient/controller/config/: ClientWebMvcConfigurer.java  KaptchaConfig.java
websocket_client/src/main/java/com/HYX/WebsocketClient/dao/: photosMapper.java  userMapper.java
websocket_client/src/main/java/com/HYX/WebsocketClient/entity/: photos.java  user.java
websocket_client/src/main/java/com/HYX/WebsocketClient/interceptor/: AdminLoginInterceptor.java
websocket_client/src/main/java/com/HYX/WebsocketClient/service/: AdminUserService.java  DetectResultService.java
websocket_client/src/main/java/com/HYX/WebsocketClient/service/Impl/: AdminUserServiceImpl.java  DetectResultServiceImpl.java
websocket_client/src/main/java/com/HYX/WebsocketClient/util/: MD5Util.java  PageResult.java  PageUtil.java
websocket_client/src/main/resources/: application.properties
websocket_client/src/main/resources/mapper/: photosMapper.xml
websocket_client/src/main/resources/templates/admin/: client.html  login.html  result.html  sidebar.html
websocket_client/src/test/java/com/HYX/WebsocketClient/: WebsocketClientApplicationTests.java
